# Canastae

./: .gitignore  README.md
project/python-services/: Dockerfile  pyproject.toml  requirements.txt
project/python-services/backend/: enviroment_variables.py  main.py
project/python-services/backend/config/: templates.py
project/python-services/backend/controllers/: __init__.py  user.py  user_auth.py
project/python-services/backend/dependencies/: auth.py
project/python-services/backend/services/: user.py  user_auth.py
project/python-services/backend/utils/: jwt_handler.py
project/python-services/frontend/templates/: inicio.html  login.html
proyect/python-services/: Dockerfile  README.md  pyproject.toml  requirements.txt
proyect/python-services/backend/: enviroment_variables.py  main.py
proyect/python-services/backend/controllers/: index.py  user.py
proyect/python-services/backend/repositories/: base_repository.py
proyect/python-services/backend/repositories/users/: user.py
proyect/python-services/frontend/: (old)index.html  index.html
proyect/python-services/frontend/assets/css/: styles.css
